# Bahyway.Ecosystem

./: .gitignore  Bahyway.Ecosystem.sln  Directory.Packages.props  OLD_Directory.Packages.props  cpm_fix_log_20251217_043147.txt  restore_log.txt
Bahyway.Ecosystem/: tree.txt
devops/: .env.website  01-setup-cluster.yml  Correct-Path.ps1  New-BahywayProject.ps1  create-all-files.ps1  create-infrastructure-files.ps1  docker-compose.yml.disabled  fix-bug.ps1  fix-replication.ps1  haproxy.cfg  init-primary.sh.disabled  init-replica.sh.disabled  magic-moment.ps1  postgresql-primary.conf  quick-start.sh  test-failover.sh  verify-replication.sh
docker/: docker-compose.yml
docs/: Bahyway_Project_tree.txt  Build-log1.txt  FAILOVER.md  QUICKSTART.md  README.md  SETUP.md  WEBSITE-README.md  clean_build_log.txt  decouple_fix_log.txt  final_dedupe_fix.txt  fix_log.txt  guaranteed_run_log.txt  mvvm_master_log.txt  webview_swap_log.txt  xml_repair_log.txt
output/: datavault.sql  graph.cypher
scripts/: .gitignore  Deploy-Najaf.ps1  Deploy-WPDWay.ps1  Deploy-beeMDM.ps1  KGEditor.xml  Repair-SensorMonitorActor.ps1  RulesEngine.xml  Setup_Python_Env.ps1  Update-MainWindow.ps1  decouple-fix.ps1  final_fix.ps1  find-all-nestedprops-files.ps1  fix-fix.ps1  fix-nested-props.ps1  fix_cpm.ps1  fix_cpm_final.ps1  fix_cpm_with_logging.ps1  guaranteed-run.ps1  (+10 more)
src/BahyWay.Kernel/fuzzy-logic-study/rust-fuzzy-logic/: Cargo.toml
src/BahyWay.Kernel/fuzzy-logic-study/rust-fuzzy-logic/src/: operations.rs
src/BahyWay.Kernel/fuzzy-logic-study/rust-fuzzy-logic/tests/: integration_tests.rs
(+508 files in other folders)
